More bootstrap, responsive, formik + filterProduct quantity change fix - filterProduct to cart product not showing , code fixing and refactoring

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,5 +40,12 @@
   "We'll never share your email with anyone else.": "We'll never share your email with anyone else.",
   "Password": "Password",
   "Name": "Name",
-  "Enter email": "Enter email"
+  "Enter email": "Enter email",
+  "ProductName_Regular Fit Jersey top": "Regular Fit Jersey top",
+  "ProductName_Cotton polo shirt": "Cotton polo shirt",
+  "ProductName_Cotton t-shirt": "Cotton t-shirt",
+  "ProductName_Sweatshirt shorts": "Sweatshirt shorts",
+  "ProductName_Velour top": "Velour top",
+  "ProductName_Pile all-in-one suit with ears": "Pile all-in-one suit with ears",
+  "ProductName_Regular Fit football shirt": "Regular Fit football shirt"
 }
