--- a/src/locales/sa.json
+++ b/src/locales/sa.json
@@ -42,5 +42,18 @@
   "We'll never share your email with anyone else.": "لن نشارك بريدك الإلكتروني أبدًا مع أي شخص آخر.",
   "Enter mobile": "أدخل الجوال",
   "Enter name": "أدخل الاسم",
-  "Enter email": "أدخل البريد الإلكتروني"
+  "Enter email": "أدخل البريد الإلكتروني",
+  "ProductName_Regular Fit Jersey top": "قميص جيرسي ذو مقاس عادي",
+  "ProductName_Cotton polo shirt": "قميص بولو قطن",
+  "ProductName_Cotton t-shirt": "تيشيرت قطن",
+  "ProductName_Sweatshirt shorts": "شورت سويت شيرت",
+  "ProductName_Velour top": "قمة القطيفة",
+  "ProductName_Pile all-in-one suit with ears": "بدلة الكل في واحد مع الأذنين",
+  "ProductName_Regular Fit football shirt": "قميص كرة القدم ذو المقاس العادي",
+  "Shopping Cart": "عربة التسوق",
+  "Product": "منتج",
+  "Quantity": "كمية",
+  "Total": "المجموع",
+  "Remove": "يزيل",
+  "Checkout": "الدفع"
 }
