--- a/src/locales/sa.json
+++ b/src/locales/sa.json
@@ -57,5 +57,6 @@
   "Remove": "يزيل",
   "Checkout": "الدفع",
   "Order ID: ": " :رقم التعريف الخاص بالطلب",
-  "Most Popular": "الأكثر شعبية"
+  "Most Popular": "الأكثر شعبية",
+  "Search products...": "البحث عن المنتجات..."
 }
