--- a/src/locales/sa.json
+++ b/src/locales/sa.json
@@ -58,5 +58,6 @@
   "Checkout": "الدفع",
   "Order ID: ": " :رقم التعريف الخاص بالطلب",
   "Most Popular": "الأكثر شعبية",
-  "Search products...": "البحث عن المنتجات..."
+  "Search products...": "البحث عن المنتجات...",
+  "Get connected with us on social networks": "تواصل معنا على الشبكات الاجتماعية"
 }
