--- a/src/locales/sa.json
+++ b/src/locales/sa.json
@@ -56,8 +56,11 @@
   "Total": "المجموع",
   "Remove": "يزيل",
   "Checkout": "الدفع",
-  "Order ID: ": " :رقم التعريف الخاص بالطلب",
+  "Order Number ": " رقم الأمر",
   "Most Popular": "الأكثر شعبية",
   "Search products...": "البحث عن المنتجات...",
-  "Get connected with us on social networks": "تواصل معنا على الشبكات الاجتماعية"
+  "Get connected with us on social networks": "تواصل معنا على الشبكات الاجتماعية",
+  "Close": "أغلق",
+  "Don't have an account?": "ليس لديك حساب؟",
+  "Please Sign In": "يرجى تسجيل الدخول"
 }
