--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -47,5 +47,18 @@
   "ProductName_Sweatshirt shorts": "Sweatshirt shorts",
   "ProductName_Velour top": "Velour top",
   "ProductName_Pile all-in-one suit with ears": "Pile all-in-one suit with ears",
-  "ProductName_Regular Fit football shirt": "Regular Fit football shirt"
+  "ProductName_Regular Fit football shirt": "Regular Fit football shirt",
+  "Shopping Cart": "Shopping Cart",
+  "Product": "Product",
+  "Quantity": "Quantity",
+  "Total": "Total",
+  "Remove": "Remove",
+  "Checkout": "Checkout",
+  "Order Number": "Order Number",
+  "Most Popular": "Most Popular",
+  "Search products...": "Search products...",
+  "Get connected with us on social networks": "Get connected with us on social networks",
+  "Close": "Close",
+  "Don't have an account?": "Don't have an account?",
+  "Please Sign In": "Please Sign In"
 }
