--- a/src/locales/sa.json
+++ b/src/locales/sa.json
@@ -62,5 +62,7 @@
   "Get connected with us on social networks": "تواصل معنا على الشبكات الاجتماعية",
   "Close": "أغلق",
   "Don't have an account?": "ليس لديك حساب؟",
-  "Please Sign In": "يرجى تسجيل الدخول"
+  "Please Sign In": "يرجى تسجيل الدخول",
+  "Next": "التالي",
+  "Prev": "السابق"
 }
